kubernete_aws/staging/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices-demo
spec:
  rules:
  - host: staging.microservices.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-node
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-react
            port:
              number: 8080
